# marine-plus

./: .cursorrules  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  deploy.yml
marine/: __init__.py  logger.py  predict.py  types.py  visualize_diff.py
marine/criterions/: crossentopyloss.py  log_likelihood.py
marine/data/: dataset.py  dictionary_downloader.py  edit_dict.csv  jtalk_dict.py  pad.py  user_dict.csv  user_dict.dic  util.py
marine/data/dictionaries/: .gitignore
marine/data/feature/: feature_set.py  feature_table.py
marine/models/: __init__.py  att_lstm_decoder.py  base_model.py  bilstm_encoder.py  crf_decoder.py  embedding.py  linear_decoder.py  util.py
marine/modules/: crf_tagger.py
marine/utils/: metrics.py  openjtalk_util.py  post_process.py  pretrained.py  regex.py  util.py
marine/utils/g2p_util/: accent.py  boundary.py  g2p.py  util.py
recipe/20250122_marine-plus/: run.sh  visualize_wrong_mora_diff.py
recipe/common/: make_raw_corpus.sh
tests/: test_g2p_util.py  test_jsut_corpus.py  test_metrics.py  test_modules.py  test_predictor.py  test_util.py
