[build-system]
requires = ["wheel", "setuptools"]

[tool.taskipy.tasks]
install = "if [ ! -d '.venv' ]; then python -m venv .venv; fi && .venv/bin/pip install -U -e '.[dev,pyopenjtalk]'"
lint = ".venv/bin/ruff check --fix ."
format = ".venv/bin/ruff format ."
test = ".venv/bin/pytest"

[tool.ruff]
# 1行の長さを最大88文字に設定
line-length = 88
# インデントの幅を4スペースに設定
indent-width = 4
# Python 3.10 を利用する
target-version = "py310"

[tool.ruff.lint]
# flake8, pycodestyle, pyupgrade, isort, Ruff 固有のルールを使う
select = ["F", "E", "W", "UP", "I", "RUF"]
ignore = [
    "E501",    # 1行の長さを超えている場合の警告を抑制
    "E731",    # Do not assign a `lambda` expression, use a `def` を抑制
    "UP038",   # 非推奨化されているルールのため
    "RUF001",  # 全角記号など `ambiguous unicode character` も使いたいため
    "RUF002",  # 全角記号など `ambiguous unicode character` も使いたいため
    "RUF003",  # 全角記号など `ambiguous unicode character` も使いたいため
    "RUF005",  # 万が一のリグレッション回避のため抑制
]

[tool.ruff.lint.isort]
# インポートブロックの後に2行空ける
lines-after-imports = 2

[tool.ruff.format]
# ダブルクオートを使う
quote-style = "double"
# インデントにはスペースを使う
indent-style = "space"
